Sat Jan 26 21:41:39 2002  Steve Huston  <shuston@riverace.com>

        * ace/Process_Manager.cpp (wait): Fixed compiler warning on
          Linux about unused wait_until. This fix removes the ability
          to spin around the 'for' loop waiting for signals multiple
          times with the timeout decreasing to account for wait time.
          Will have to come back to restore this functionality later.

Sat Jan 26 14:40:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * include/makeinclude/ace_flags.bor:
          Added compiler and linker flags for new XML library

        * XML/common/Makefile.bor:
        * XML/parser/parser.Makefile.bor:
        * XML/Makefile.bor:
        * XML/parser/Makefile.bor:
        * XML/tests/Makefile.bor:
          Added BCB makefiles for the new XML library.

Fri Jan 25 19:58:41 2002  Steve Huston  <shuston@riverace.com>

        * ace/Process_Manager.cpp (wait(pid_t, const ACE_Time_Value &,
          ACE_exitcode *status)): If platform offers sigtimedwait, use it
          instead of setting ualarm and then doing sigwait. Once ualarm
          is set, it will fire, even if this method has returned. This
          causes Solaris processes to die on SIGALRM.

          Also, do not play with the process group ID by default. It's
          not needed for doing normal signal management by most processes.
          If processes really have a need to change or set a new process
          group, they need to do it explicitly by using ACE_OS::setpgid()
          or by setting a process group ID in an ACE_Process_Options object
          when spawning processes.

        * tests/Process_Manager_Test.cpp: Added a bit more diagnostic info.

Fri Jan 25 18:29:37 2002  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-4.x.h: Removed ACE_HAS_SIGTIMEDWAIT. It compiles,
          but returns ENOSYS at run time.

        * ace/config-aix5.1.h: Added ACE_HAS_SIGTIMEDWAIT.
