@@ -1,3 +1,11 @@
+Sat Jan 26 19:02:49 2002  Ossama Othman  <ossama@uci.edu>
+
+	* ace/Process_Manager.cpp (register_handler):
+
+	  Corrected code that always returned -1.  Code that should only
+	  have been run on error was always run since it was outside of an
+	  "if block."  Curly braces are a good thing.
+
 Sat Jan 26 21:41:39 2002  Steve Huston  <shuston@riverace.com>
 
         * ace/Process_Manager.cpp (wait): Fixed compiler warning on
